# DDFA

./: CMakeLists.txt  README.md
examples/: Makefile  axpy.c  graph.graphml  malloc.c  square.c
src/: basicdef.h  callgraph.c  callgraph.h  datamap.c  datamap.h  ddfa.c  ddfa.h  ddfa_config.h.cmake
